--- a/Inspiration_Galerie.html
+++ b/Inspiration_Galerie.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,60 +9,69 @@
 </head>
 
 <body>
-        
-    <!--- Header -->
+
+    <!-- Header mit Navigation -->
     <header>
-        <nav>
+        <nav aria-label="Hauptnavigation">
             <a href="index.html">
-            <!-- Not final Logo -->
-            <img
-                src="/Assets/Me.jpeg"
-                alt="Ein Avatar-Bild von Patrick" title="Ein Avatar-Bild von Patrick"
-                width="100"
-            />
+                <img src="/Assets/Me.jpeg" alt="Avatar-Bild von Patrick" title="Avatar-Bild von Patrick" width="100">
             </a>
-            <a href="/Essen_Blog-Seite.html">Essen</a>
-            <a href="/Reisen_Blog-Seite.html">Reisen</a>
-            <a href="/Inspiration_Galerie.html">Inspiration</a>
-            <a href="Kontakt.html">Kontakt</a>
+            <ul>
+                <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
+                <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
+                <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
+                <li><a href="/Kontakt.html">Kontakt</a></li>
+            </ul>
         </nav>
         <h1>Inspiration</h1>
     </header>
 
-    <!--- Grid mit Fotos -->
-    <img src="/Assets/Taipeh.jpeg" alt="Ein Blick von einer Aussichtsterasse auf die Stadt Taipeh. Dort sind Hochhäuser un dim Hintergrund Berge zu sehen." title="Ein Blick von einer Aussichtsterasse auf die Stadt Taipeh. Dort sind Hochhäuser un dim Hintergrund Berge zu sehen." style="width:100%">
-    <img src="/Assets/Bangkok.jpeg" alt="Ein Markt auf einer Einkaufsstrasse in Bangkok. Die Stände werden von bunten Sonnenschirmen überdacht und dutzende Menschen bewegen sich zwischen ihnen." title="Ein Markt auf einer Einkaufsstrasse in Bangkok. Die Stände werden von bunten Sonnenschirmen überdacht und dutzende Menschen bewegen sich zwischen ihnen." style="width:100%">
-    <img src="/Assets/Philipinen.jpeg" alt="Eine Strandaufnahme mit blauem Himmel und Wasser. Am Strand stehen zwei Bäume, welche Schatten auf zwei Sonnenliegen und eine runde Hängematte zwischen ihnen werfen." title="Eine Strandaufnahme mit blauem Himmel und Wasser. Am Strand stehen zwei Bäume, welche Schatten auf zwei Sonnenliegen und eine runde Hängematte zwischen ihnen werfen." style="width:100%">
-    <img src="/Assets/Korean-BBQ.jpeg" alt="Draufsicht auf einen großen Holztisch mit einem eingelassenem Tischgrill, auf dem Gemüse und Fleisch gegrillt wird. Daneben stehen mehrere Teller mit unterschiedlichen Lebensmitteln." title="Draufsicht auf einen großen Holztisch mit einem eingelassenem Tischgrill, auf dem Gemüse und Fleisch gegrillt wird. Daneben stehen mehrere Teller mit unterschiedlichen Lebensmitteln." style="width:100%">
-    <img src="/Assets/Nudelsuppe.jpeg" alt="Ein kleiner Tisch auf dem eine aus Holz gefertigte Brücke steht, die zum Servieren verschiedener Lebensmitteln verwendet wird. Daneben steht eine große schwarze Suppenschüssle mit einer hellen Brühe." title="Ein kleiner Tisch auf dem eine aus Holz gefertigte Brücke steht, die zum Servieren verschiedener Lebensmitteln verwendet wird. Daneben steht eine große schwarze Suppenschüssle mit einer hellen Brühe." style="width:100%">
-    <img src="/Assets/Changsha.jpeg" alt="Auf einer weißen Tischplatte stehen 4 große weiße Schüsseln gefüllt mit 4 verschiedenen chinesischen Fleisch und Gemüse Gerichten." title="Auf einer weißen Tischplatte stehen 4 große weiße Schüsseln gefüllt mit 4 verschiedenen chinesischen Fleisch und Gemüse Gerichten." style="width:100%">
+    <!-- Hauptinhalt -->
+    <main>
+        <section aria-labelledby="gallery-title">
+            <h2 id="gallery-title">Eine Sammlung meiner schönsten Eindrücke</h2>
 
-    <img src="/Assets/Sushi-Frühstück.jpeg" alt="Blick von Oben auf einen Holztisch auf dem zwei Tassen grüner Tee, zwei kleine Schüsseln mit Sojasosse, ein Glas Bier, eine Schüssel mit Thunfischscheiben und ein Holzbret mit 12 verschiedenen Sushi-Variationen." title="Blick von Oben auf einen Holztisch auf dem zwei Tassen grüner Tee, zwei kleine Schüsseln mit Sojasosse, ein Glas Bier, eine Schüssel mit Thunfischscheiben und ein Holzbret mit 12 verschiedenen Sushi-Variationen." style="width:100%">
-    <img src="/Assets/Shanghai-BBQ.jpeg" alt="Auf einem aufrechtstehendem Holzstamm, der als Tisch dienst, steht ein Cocktailglas, eine Schüssel mit Kichererbsendipp und Brot und daneben eine Platte belegt mit gegrillten Fleischspiessen, Tomaten, Garnelen und Salatblättern." title="Auf einem aufrechtstehendem Holzstamm, der als Tisch dienst, steht ein Cocktailglas, eine Schüssel mit Kichererbsendipp und Brot und daneben eine Platte belegt mit gegrillten Fleischspiessen, Tomaten, Garnelen und Salatblättern." style="width:100%">
-    <img src="/Assets/Bali-Pool.jpeg" alt="Blick von einer Terrasse, auf der zwei Sonnenliegen neben einem Sonnenschirm stehen und ein kleiner Pool eingelassen ist, der Blick geht in einen grünen Wald unter einem blauen Himmel." title="Blick von einer Terrasse, auf der zwei Sonnenliegen neben einem Sonnenschirm stehen und ein kleiner Pool eingelassen ist, der Blick geht in einen grünen Wald unter einem blauen Himmel." style="width:100%">
-    <img src="/Assets/Fisch.jpeg" alt="Nahaufnaheme von 2 Gunkan-Makis auf einer Steinplatte. Die Makis sind mit kleinen weißen Fischen gefüllt, die über das Nori-Blatt hinausragen." title="Nahaufnaheme von 2 Gunkan-Makis auf einer Steinplatte. Die Makis sind mit kleinen weißen Fischen gefüllt, die über das Nori-Blatt hinausragen." style="width:100%">
-    <img src="/Assets/Korean-Streetfood.jpeg" alt="Im Vordergrund steht eine große Schüssel gefüllt mit rot-mariniertem Gemüse, dahinter eine Schüssel mit Makirollen und eine weitere mit Reisnudeln in einer cremig roten Umami-Sauce. Dahinter sitzt mehrere Gäste beim Essen, während hinter ihnen Passanten vorbeigehen." title="Im Vordergrund steht eine große Schüssel gefüllt mit rot-mariniertem Gemüse, dahinter eine Schüssel mit Makirollen und eine weitere mit Reisnudeln in einer cremig roten Umami-Sauce. Dahinter sitzt mehrere Gäste beim Essen, während hinter ihnen Passanten vorbeigehen." style="width:100%">
-    <img src="/Assets/Wan-Tan-Suppe.jpeg" alt="Eine Frau sitzt an einem Tisch und isst aus einer weß-blauen Schüssel Teigtaschen, die in einer Brühe schwimmen. Sie hält Essstäbchen in ihrer rechten und einen Löffel in ihrer linken Hand." style="width:100%">
+            <div class="gallery">
+                <img src="/Assets/Taipeh.jpeg" alt="Aussicht von einer Terrasse auf die Skyline von Taipeh mit Bergen im Hintergrund" title="Blick auf Taipeh von einer Aussichtsterrasse">
+                <img src="/Assets/Bangkok.jpeg" alt="Bunte Marktstände mit Sonnenschirmen in einer Einkaufsstraße in Bangkok" title="Markt in Bangkok mit vielen bunten Ständen">
+                <img src="/Assets/Philipinen.jpeg" alt="Tropischer Strand mit zwei Bäumen, die eine Hängematte beschatten" title="Strand auf den Philippinen mit Hängematte und Liegen">
+                <img src="/Assets/Korean-BBQ.jpeg" alt="Tisch mit eingebautem Grill, auf dem Gemüse und Fleisch gegrillt werden" title="Koreanisches BBQ – Fleisch und Gemüse direkt am Tisch grillen">
+                <img src="/Assets/Nudelsuppe.jpeg" alt="Tisch mit Holzbrücke als Servierplatte und einer großen Schüssel heller Brühe" title="Vietnamesisch inspirierte Nudelsuppe aus Südchina">
+                <img src="/Assets/Changsha.jpeg" alt="Vier große Schüsseln mit verschiedenen chinesischen Fleisch- und Gemüsegerichten" title="Chinesische Fleischtöpfe aus Changsha">
+                <img src="/Assets/Sushi-Frühstück.jpeg" alt="Sushi-Frühstück mit grünem Tee, Sojasoße und Bier auf einem Holztisch" title="Japanisches Sushi-Frühstück mit Thunfisch und verschiedenen Sushi-Variationen">
+                <img src="/Assets/Shanghai-BBQ.jpeg" alt="Teller mit gegrillten Fleischspießen, Garnelen und Beilagen auf einem rustikalen Holztisch" title="Shanghai BBQ mit gegrilltem Fleisch, Garnelen und Kichererbsendipp">
+                <img src="/Assets/Bali-Pool.jpeg" alt="Sonnenliegen neben einem Pool mit Blick auf einen tropischen Wald" title="Pool-Terrasse auf Bali mit Blick ins Grüne">
+                <img src="/Assets/Fisch.jpeg" alt="Nahaufnahme von zwei Gunkan-Makis mit kleinen weißen Fischen als Füllung" title="Japanische Gunkan-Makis mit frischen weißen Fischen">
+                <img src="/Assets/Korean-Streetfood.jpeg" alt="Koreanisches Streetfood mit mariniertem Gemüse, Makirollen und Reisnudeln" title="Koreanisches Streetfood auf einem Markt">
+                <img src="/Assets/Wan-Tan-Suppe.jpeg" alt="Frau isst Wan-Tan-Suppe aus einer blau-weißen Schüssel mit Essstäbchen und Löffel" title="Traditionelle Wan-Tan-Suppe">
+                <img src="/Assets/Fleischverkauf.jpeg" alt="Straßenstand mit aufgehängten Hühnern, Würsten und fettigen Fleischstücken" title="Straßenverkauf von Fleisch in einer Garage">
+                <img src="/Assets/Tokio-Kultur.jpeg" alt="Rote traditionelle Gebäude um einen Platz mit Touristen in Japan" title="Traditionelle japanische Architektur in Tokio">
+                <img src="/Assets/Bangkok-Blumenmarkt.jpeg" alt="Große Markthalle in Bangkok mit vielen Menschen und Verkaufsständen" title="Blumenmarkt in Bangkok">
+                <img src="/Assets/Shanghai_Skyline.jpeg" alt="Blick von einem Hochhaus auf den Oriental-Pearl-Tower in Shanghai" title="Shanghai Skyline mit dem Oriental-Pearl-Tower">
+                <img src="/Assets/Kalte_Nudeln.jpeg" alt="Holzschale mit breiten Weizennudeln, Gemüse und Tofu" title="Traditionelle kalte Weizennudeln mit Gemüse und Tofu">
+                <img src="/Assets/Syndey_Hafen.jpeg" alt="Sydney Hafen bei Nacht mit bunten Lichtern und reflektierendem Wasser" title="Hafenansicht von Sydney in der Abenddämmerung">
+                <img src="/Assets/Suzhou_Mall.jpeg" alt="Sonnenuntergang über einer Einkaufsstraße mit hohen Gebäuden" title="Sonnenuntergang über Suzhou">
+                <img src="/Assets/Teeanbau.jpeg" alt="Teefelder auf einem Hügel mit bewaldeten Bergen im Hintergrund" title="Teeplantagen in Asien">
+                <img src="/Assets/Hainan_Beach.jpeg" alt="Langer leerer Sandstrand mit Meer und grünen Hügeln auf Hainan" title="Traumhafter Strand auf Hainan">
+                <img src="/Assets/Scharfe-Nudeln.jpeg" alt="Braune Nudelschüssel mit dicken Nudeln, Gemüse, Fleisch und roter Chilipaste" title="Chinesische scharfe Nudeln mit Chili und Fleisch">
+                <img src="/Assets/Tokio.jpeg" alt="Menschen in einer belebten Einkaufsstraße in Tokio mit japanischen Schriftzeichen" title="Einkaufsstraße in Tokio mit Menschenmengen">
+                <img src="/Assets/Nachtisch.jpeg" alt="Schokoladenkugel mit Vanilleeis und Apfelkuchen mit Vanillesoße auf einem Holztisch" title="Japanisches Dessert mit Schokoladenkugel und Apfelkuchen">
+            </div>
 
-    <img src="/Assets/Fleischverkauf.jpeg" alt="Ein Straßenstand in einer Garage bietet verscheidenes Fleisch zum Kauf an. Es hängen Hühner und Würste von der Decke und auf dem Verkaufsttisch liegen große fettige Fleischstücke." title="Ein Straßenstand in einer Garage bietet verscheidenes Fleisch zum Kauf an. Es hängen Hühner und Würste von der Decke und auf dem Verkaufsttisch liegen große fettige Fleischstücke." style="width:100%">
-    <img src="/Assets/Tokio-Kultur.jpeg" alt="Traditionelle japansische Gebäude in Rot gestrichen umrunden einen großen Platz, auf dem Touristen umhergehen." title="Traditionelle japansische Gebäude in Rot gestrichen umrunden einen großen Platz, auf dem Touristen umhergehen." style="width:100%">
-    <img src="/Assets/Bangkok-Blumenmarkt.jpeg" alt="Innenansicht einer großen Markthalle, in der sich viele Menschen und dutzende Verkaufstische befinden." title="Innenansicht einer großen Markthalle, in der sich viele Menschen und dutzende Verkaufstische befinden." style="width:100%">
-    <img src="/Assets/Shanghai_Skyline.jpeg" alt="Blick von einem Hochhaus im Zentrum von Shanghai. Der Blick geht über 4 Hochhäuser hinweg und trifft auf den Oriental-Pearl-Tower, der einer langen Nadel gleicht, auf der zwei große purpurfarbenen Perlen stecken." title="Blick von einem Hochhaus im Zentrum von Shanghai. Der Blick geht über 4 Hochhäuser hinweg und trifft auf den Oriental-Pearl-Tower, der einer langen Nadel gleicht, auf der zwei große purpurfarbenen Perlen stecken." style="width:100%">
-    <img src="/Assets/Kalte_Nudeln.jpeg" alt="Holzschale mit hellen breiten Nudeln, die mit verschiedenem Gemüse und Tofu gemischt sind" title="Holzschale mit hellen breiten Nudeln, die mit verschiedenem Gemüse und Tofu gemischt sind" style="width:100%">
-    <img src="/Assets/Syndey_Hafen.jpeg" alt="Hafenansicht von Sydney in der Abenddämmerung. Verschiedenfarbige Lichter beleuchten den Steg und reflektieren sich im Wasse, auf dem zwei Tretboote fahren." title="Hafenansicht von Sydney in der Abenddämmerung. Verschiedenfarbige Lichter beleuchten den Steg und reflektieren sich im Wasse, auf dem zwei Tretboote fahren." style="width:100%">
+        </section>
+    </main>
 
-    <img src="/Assets/Suzhou_Mall.jpeg" alt="Ein Blick von einer Dachterrasse über eine großen leeren Platz, der in eine Straße übergeht, welche von hohen Häusern eingerahmt ist. In der Ferne geht die Sonne unter und taucht die Häuserschlucht in ein tiefes orangenes Licht." title="Ein Blick von einer Dachterrasse über eine großen leeren Platz, der in eine Straße übergeht, welche von hohen Häusern eingerahmt ist. In der Ferne geht die Sonne unter und taucht die Häuserschlucht in ein tiefes orangenes Licht." style="width:100%">
-    <img src="/Assets/Teeanbau.jpeg" alt="Landschaftsaufnahem über Teefelder auf einem Hügel. Die Sträücher sind kräftig Grün. Im Hintergrund sind bewaldete Hügel zu sehen." title="Landschaftsaufnahem über Teefelder auf einem Hügel. Die Sträücher sind kräftig Grün. Im Hintergrund sind bewaldete Hügel zu sehen." style="width:100%">
-    <img src="/Assets/Hainan_Beach.jpeg" alt="Standaufnahme auf der Insel Hainan. Ein langer leerer Strand, der am hellblauen Meer grenzt, in dem zwei Menschen baden. Im Hintergrund sind grüne Hügel, eine Felswand, bedeckt von einem blauen Himmel mit Wolken." title="Standaufnahme auf der Insel Hainan. Ein langer leerer Strand, der am hellblauen Meer grenzt, in dem zwei Menschen baden. Im Hintergrund sind grüne Hügel, eine Felswand, bedeckt von einem blauen Himmel mit Wolken." style="width:100%">
-    <img src="/Assets/Scharfe-Nudeln.jpeg" alt="Nahaufnahme einer braunen Nudelschüssel mit dicken Nudeln, Gemüse, Fleisch und einen roten Chillipaste." title="Nahaufnahme einer braunen Nudelschüssel mit dicken Nudeln, Gemüse, Fleisch und einen roten Chillipaste." style="width:100%">
-    <img src="/Assets/Tokio.jpeg" alt="Viele Menschen in einer Einkaufsstraße, eingerahmt von Häsern mit japanischen Schriftzeichen. In der Ferne ist der Fernsehturm von Tokio zu sehen." title="Viele Menschen in einer Einkaufsstraße, eingerahmt von Häsern mit japanischen Schriftzeichen. In der Ferne ist der Fernsehturm von Tokio zu sehen." style="width:100%">
-    <img src="/Assets/Nachtisch.jpeg" alt="Draufsicht auf einen Bartisch, auf dem zwei Teller nebeneinander stehen. Im linken liegt eine aufgebrochene Schokoladenkugel, die mit Vanilleeis gefüllt ist. Auf dem rechten Teller ist eine Kugel aus Apfelkuchen zu sehen, die auf einer Vanillesße schwimmt. dekoriert ist sie mit Apfelsticks und Pfirsichschnitzen." title="Draufsicht auf einen Bartisch, auf dem zwei Teller nebeneinander stehen. Im linken liegt eine aufgebrochene Schokoladenkugel, die mit Vanilleeis gefüllt ist. Auf dem rechten Teller ist eine Kugel aus Apfelkuchen zu sehen, die auf einer Vanillesße schwimmt. dekoriert ist sie mit Apfelsticks und Pfirsichschnitzen." style="width:100%">
-
-    <!--- Footer -->
+    <!-- Footer -->
     <footer>
-        <p> <a href="/Kontakt.html">Impressum</a> </p>
-        <p> <a href="/Kontakt.html">Kontakt</a> </p>
-    </footer> 
+        <nav aria-label="Footer-Navigation">
+            <ul>
+                <li><a href="/Kontakt.html">Impressum</a></li>
+                <li><a href="/Kontakt.html">Kontakt</a></li>
+            </ul>
+        </nav>
+        <p>&copy; 2024 Patrick – 4 Years in China</p>
+    </footer>
 
 </body>
+
 </html>
