--- a/Reisen_Blog-Seite.html
+++ b/Reisen_Blog-Seite.html
@@ -1,61 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reisen</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-        <!--- Header -->
-        <header>
-            <nav>
-                <a href="index.html">
-                <!-- Not final Logo -->
-                <img
-                    src="/Assets/Me.jpeg"
-                    alt="Ein Avatar-Bild von Patrick" title="Ein Avatar-Bild von Patrick"
-                    width="100"
-                />
-                </a>
-                <a href="/Essen_Blog-Seite.html">Essen</a>
-                <a href="/Reisen_Blog-Seite.html">Reisen</a>
-                <a href="/Inspiration_Galerie.html">Inspiration</a>
-                <a href="Kontakt.html">Kontakt</a>
-            </nav>
-            <h1>Reisen</h1>
-        </header>
 
-        <!--- Blog -->
-        <section>
-            <img src="/Assets/Philipinen.jpeg" alt="Eine Strandaufnahme mit blauem Himmel und Wasser. Am Strand stehen zwei Bäume, welche Schatten auf zwei Sonnenliegen und eine runde Hängematte zwischen ihnen werfen." title="Eine Strandaufnahme mit blauem Himmel und Wasser. Am Strand stehen zwei Bäume, welche Schatten auf zwei Sonnenliegen und eine runde Hängematte zwischen ihnen werfen.">
-            <h2>In 3 1/2 Stundne nach Manila</h2>
-            <p>Von Shanghai geht es in weniger als 4 Stunden auf die Philipinen. VOn Manila aus erreicht man fast alle gegenden auf der Hauptinsel mit dem Taxi. Was einen erwartet sind unglaublich nette Menschen und traumhafte Strände.</p>
+    <!-- Header mit Navigation -->
+    <header>
+        <nav aria-label="Hauptnavigation">
+            <a href="index.html">
+                <img src="/Assets/Me.jpeg" alt="Avatar-Bild von Patrick" title="Avatar-Bild von Patrick" width="100">
+            </a>
+            <ul>
+                <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
+                <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
+                <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
+                <li><a href="/Kontakt.html">Kontakt</a></li>
+            </ul>
+        </nav>
+        <h1>Reisen</h1>
+    </header>
+
+    <!-- Hauptinhalt -->
+    <main>
+
+        <!-- Philippinen -->
+        <section id="philippinen" aria-labelledby="title-philippinen">
+            <h2 id="title-philippinen">In 3 ½ Stunden nach Manila</h2>
+            <img src="/Assets/Philipinen.jpeg" 
+                 alt="Tropischer Strand mit zwei Bäumen, die eine Hängematte beschatten" 
+                 title="Strand auf den Philippinen mit Hängematte und Liegen">
+            <p>Von Shanghai geht es in weniger als vier Stunden auf die Philippinen. Von Manila aus erreicht man fast alle Gegenden auf der Hauptinsel mit dem Taxi. Was einen erwartet, sind unglaublich nette Menschen und traumhafte Strände.</p>
         </section>
 
-        <section>
-            <img src="/Assets/Taipeh.jpeg" alt="Ein Blick von einer Aussichtsterasse auf die Stadt Taipeh. Dort sind Hochhäuser un dim Hintergrund Berge zu sehen." title="Ein Blick von einer Aussichtsterasse auf die Stadt Taipeh. Dort sind Hochhäuser un dim Hintergrund Berge zu sehen.">
-            <h2>Taiwan ist ein muss</h2>
-            <p>Hitze, hohe Luftfeuchtigkeit, ein vibrierendes Nachtleben, Streetfood, Kultur im Überfluss und eine herrliche Natur zum wandern und baden gehen. Taiwan bietet alles auf kleinstem Raum.</p>
+        <!-- Taiwan -->
+        <section id="taiwan" aria-labelledby="title-taiwan">
+            <h2 id="title-taiwan">Taiwan ist ein Muss</h2>
+            <img src="/Assets/Taipeh.jpeg" 
+                 alt="Aussicht von einer Terrasse auf die Skyline von Taipeh mit Bergen im Hintergrund" 
+                 title="Blick auf Taipeh von einer Aussichtsterrasse">
+            <p>Hitze, hohe Luftfeuchtigkeit, ein vibrierendes Nachtleben, Streetfood, Kultur im Überfluss und eine herrliche Natur zum Wandern und Baden – Taiwan bietet alles auf kleinstem Raum.</p>
         </section>
 
-        <section>
-            <img src="/Assets/Tokio.jpeg" alt="Viele Menschen in einer Einkaufsstraße, eingerahmt von Häsern mit japanischen Schriftzeichen. In der Ferne ist der Fernsehturm von Tokio zu sehen." title="Viele Menschen in einer Einkaufsstraße, eingerahmt von Häsern mit japanischen Schriftzeichen. In der Ferne ist der Fernsehturm von Tokio zu sehen.">
-            <h2>Das Wochenede in Tokio</h2>
-            <p> Bie einer Flugzeit von unter 3 Stunden läd Tokio zu einem Wochenendtrip ein. Wer jetzt aber denkt, damit hätte er Tokio von der Bucketlist gestrichen, fehlt weit. Auch ein zweite, dritte und viertes Wochenende kommen einem nicht genug vor.</p>
+        <!-- Tokio -->
+        <section id="tokio" aria-labelledby="title-tokio">
+            <h2 id="title-tokio">Das Wochenende in Tokio</h2>
+            <img src="/Assets/Tokio.jpeg" 
+                 alt="Menschen in einer Einkaufsstraße mit japanischen Schriftzeichen, im Hintergrund der Fernsehturm von Tokio" 
+                 title="Einkaufsstraße in Tokio mit vielen Menschen">
+            <p>Bei einer Flugzeit von unter drei Stunden lädt Tokio zu einem Wochenendtrip ein. Wer jetzt aber denkt, damit hätte er Tokio von der Bucketlist gestrichen, irrt sich. Auch ein zweites, drittes und viertes Wochenende werden nicht genug sein.</p>
         </section>
 
-        <section>
-            <img src="/Assets/Bangkok.jpeg" alt="Ein Markt auf einer Einkaufsstrasse in Bangkok. Die Stände werden von bunten Sonnenschirmen überdacht und dutzende Menschen bewegen sich zwischen ihnen." title="Ein Markt auf einer Einkaufsstrasse in Bangkok. Die Stände werden von bunten Sonnenschirmen überdacht und dutzende Menschen bewegen sich zwischen ihnen.">
-            <h2>Eine Reise nach Thailand beginnt mit Bangkok</h2>
-            <p> Zumindest sollte sie das meiner Meinung nach. Die Stadt bietet alles im Überfluss und ist er der perfekte Kontrast, um sich danach der Ruhe und Abgeschiedenheit an einem der vielen Strände zu entschleunigen.</p>
+        <!-- Bangkok -->
+        <section id="bangkok" aria-labelledby="title-bangkok">
+            <h2 id="title-bangkok">Eine Reise nach Thailand beginnt mit Bangkok</h2>
+            <img src="/Assets/Bangkok.jpeg" 
+                 alt="Bunte Marktstände mit Sonnenschirmen in einer Einkaufsstraße in Bangkok" 
+                 title="Markt in Bangkok mit vielen bunten Ständen">
+            <p>Zumindest sollte sie das meiner Meinung nach. Die Stadt bietet alles im Überfluss und ist der perfekte Kontrast, um sich danach in der Ruhe und Abgeschiedenheit eines der vielen Strände zu entspannen.</p>
         </section>
 
-    <!--- Footer -->
+    </main>
+
+    <!-- Footer -->
     <footer>
-        <p> <a href="/Kontakt.html">Impressum</a> </p>
-        <p> <a href="/Kontakt.html">Kontakt</a> </p>
-    </footer> 
+        <nav aria-label="Footer-Navigation">
+            <ul>
+                <li><a href="/Kontakt.html">Impressum</a></li>
+                <li><a href="/Kontakt.html">Kontakt</a></li>
+            </ul>
+        </nav>
+        <p>&copy; 2024 Patrick – 4 Years in China</p>
+    </footer>
 
 </body>
+
 </html>
