--- a/index.html
+++ b/index.html
@@ -1,63 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>4 Years in China</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
-  <!--- Header -->
+  <!-- Header mit Navigation -->
   <header>
-      <nav>
-         <a href="index.html">
-          <!-- Not final Logo -->
-          <img
-              src="/Assets/Me.jpeg"
-              alt="Ein Avatar-Bild von Patrick" title="Ein Avatar-Bild von Patrick"
-              width="100"
-          />
-          </a>
-          <a href="/Essen_Blog-Seite.html">Essen</a>
-          <a href="/Reisen_Blog-Seite.html">Reisen</a>
-          <a href="/Inspiration_Galerie.html">Inspiration</a>
-          <a href="Kontakt.html">Kontakt</a>
-      </nav>
-    <img src="/Assets/Heroimage_China.jpeg" alt="Hero-Bild-Startseite">
+    <nav aria-label="Hauptnavigation">
+      <a href="index.html">
+        <img src="/Assets/Me.jpeg" alt="Avatar-Bild von Patrick" title="Avatar-Bild von Patrick" width="100">
+      </a>
+      <ul>
+        <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
+        <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
+        <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
+        <li><a href="/Kontakt.html">Kontakt</a></li>
+      </ul>
+    </nav>
+    <img src="/Assets/Heroimage_China.jpeg" alt="Hero-Bild von China mit Stadtansicht" title="Hero-Bild China">
     <h1>4 Years in China</h1>
     <p>Die schönsten Reiseziele und das leckerste Essen</p>
   </header>
 
-  <!--- Über mich -->
-  <section>
-    <img src="/Assets/Me.jpeg" alt="Ein Avatar-Bild von Patrick" title="Ein Avatar-Bild von Patrick">
-    <h2>Hi, ich bin Patrick</h2>
-    <p>Von 2018 bis 2022 habe ich als Expat in Shanghai gelebt. Meine Leidenschaft ist das Reisen und natürlich Essen! Ich liebe es einfach in einem Land herumzureisen, neue Leute kennenzulernen und neue Gerichte zu probieren. Auf meienr Website zeige ich dir die schönsten Reiseziel und was du dort zu Essen finden kannst. Lass dich inspirieren!</p>
-    <button type="button">Kontakt</button>
-  </section>
+  <!-- Hauptbereich -->
+  <main>
 
-  <!--- Reisen -->
-  <section>
-    <img src="/Assets/Reisen.jpeg" alt="Viele Menschen stehen dicht gedrängt in einer fahrenden Bahn. Nahezu alle starren auf ihr Handy" title="Viele Menschen stehen dicht gedrängt in einer fahrenden Bahn. Nahezu alle starren auf ihr Handy">
-    <h2>Die schönsten Ecken in China und das Beste drumherum</h2>
-    <p>Shanghai selbst bietet schon allerhand für Entdecker, aber China ist groß - sehr groß. Die verschiedenen Provinzen unterscheiden sich landschaftlich wie kulturell. Und von Shanghai aus ist man innerhalb weniger Stunden in Japan, Vietnam, Korea, und und und...</p>
-    <button type="button">Alle Resieziele</button>
-  </section>
+    <!-- Über mich -->
+    <section aria-labelledby="about-me">
+      <h2 id="about-me">Hi, ich bin Patrick</h2>
+      <img src="/Assets/Me.jpeg" alt="Portraitfoto von Patrick" title="Portraitfoto von Patrick">
+      <p>Von 2018 bis 2022 habe ich als Expat in Shanghai gelebt. Meine Leidenschaft ist das Reisen und natürlich Essen!
+        Ich liebe es, in einem Land herumzureisen, neue Leute kennenzulernen und neue Gerichte zu probieren. 
+        Auf meiner Website zeige ich dir die schönsten Reiseziele und das beste Essen, das du dort finden kannst. 
+        Lass dich inspirieren!</p>
+      <a href="Kontakt.html">
+        <button type="button">Kontakt</button>
+      </a>
+    </section>
 
-  <!--- Essen -->
-  <section>
-    <img src="/Assets/Essen.jpeg" alt="Auf einem großen runden Tisch mit einer weißen Tischdecke steht eine drehbare Glasplatte, auf der unterschiedlichste Gerichte serviert sind. Darunter ein gegrillter Fisch, eingelegtes Tofu, gebratenes Gemüse und eingelegter Lotus." title="Auf einem großen runden Tisch mit einer weißen Tischdecke steht eine drehbare Glasplatte, auf der unterschiedlichste Gerichte serviert sind. Darunter ein gegrillter Fisch, eingelegtes Tofu, gebratenes Gemüse, eingelegter Lotus und noch mehr.">
-    <h2>Essen macht glücklich</h2>
-    <p>Von traditionellen Gerichten über Fast Food und Fusion-Food bis hin zu Fine-Dine aus aller Herren Länder. 24 Stundne, 7 Tage die Woche, geliefert, oder im Restaurant. Asien bietet, was der Gaumen begehrt und das Herz glücklich macht.</p>
-    <button type="button">Das beste Essen</button>
-  </section>
+    <!-- Reisen -->
+    <section aria-labelledby="reisen">
+      <h2 id="reisen">Die schönsten Ecken in China und das Beste drumherum</h2>
+      <img src="/Assets/Reisen.jpeg" 
+           alt="Eine überfüllte Bahn mit Menschen, die auf ihre Handys starren" 
+           title="Menschen in einer vollen Bahn mit Handys">
+      <p>Shanghai selbst bietet schon allerhand für Entdecker, aber China ist groß – sehr groß. Die verschiedenen
+        Provinzen unterscheiden sich landschaftlich wie kulturell. Und von Shanghai aus ist man innerhalb weniger Stunden
+        in Japan, Vietnam, Korea, und und und...</p>
+      <a href="/Reisen_Blog-Seite.html">
+        <button type="button">Alle Reiseziele</button>
+      </a>
+    </section>
 
-  <!--- Footer -->
+    <!-- Essen -->
+    <section aria-labelledby="essen">
+      <h2 id="essen">Essen macht glücklich</h2>
+      <img src="/Assets/Essen.jpeg"
+           alt="Tisch mit drehbarer Glasplatte und verschiedenen chinesischen Gerichten"
+           title="Traditionelle chinesische Speisen auf einem großen Tisch">
+      <p>Von traditionellen Gerichten über Fast Food und Fusion-Food bis hin zu Fine-Dine aus aller Herren Länder. 24
+        Stunden, 7 Tage die Woche, geliefert oder im Restaurant. Asien bietet, was der Gaumen begehrt und das Herz
+        glücklich macht.</p>
+      <a href="/Essen_Blog-Seite.html">
+        <button type="button">Das beste Essen</button>
+      </a>
+    </section>
+
+  </main>
+
+  <!-- Footer -->
   <footer>
-    <p> <a href="/Kontakt.html">Impressum</a> </p>
-    <p> <a href="/Kontakt.html">Kontakt</a> </p>
-  </footer> 
+    <nav aria-label="Footer-Navigation">
+      <ul>
+        <li><a href="/Kontakt.html">Impressum</a></li>
+        <li><a href="/Kontakt.html">Kontakt</a></li>
+      </ul>
+    </nav>
+    <p>&copy; 2024 Patrick – 4 Years in China</p>
+  </footer>
 
 </body>
+
 </html>
