feat(styles): add responsive CSS for startpage layout

--- a/index.html
+++ b/index.html
@@ -23,53 +23,67 @@
         <li><a href="/Kontakt.html">Kontakt</a></li>
       </ul>
     </nav>
-    <img src="/Assets/Heroimage_China.jpeg" alt="Hero-Bild von China mit Stadtansicht" title="Hero-Bild China">
-    <h1>4 Years in China</h1>
-    <p>Die schönsten Reiseziele und das leckerste Essen</p>
+    <div class="hero">
+      <img src="/Assets/Heroimage_China.jpeg" alt="Hero-Bild von China mit Stadtansicht" title="Hero-Bild China">
+      <div class="hero-text">
+          <h1>4 Years in China</h1>
+          <p>Die schönsten Reiseziele und das leckerste Essen</p>
+      </div>
+    </div>
   </header>
 
   <!-- Hauptbereich -->
   <main>
 
     <!-- Über mich -->
-    <section aria-labelledby="about-me">
-      <h2 id="about-me">Hi, ich bin Patrick</h2>
+    <section class="about-me">
       <img src="/Assets/Me.jpeg" alt="Portraitfoto von Patrick" title="Portraitfoto von Patrick">
-      <p>Von 2018 bis 2022 habe ich als Expat in Shanghai gelebt. Meine Leidenschaft ist das Reisen und natürlich Essen!
-        Ich liebe es, in einem Land herumzureisen, neue Leute kennenzulernen und neue Gerichte zu probieren. 
-        Auf meiner Website zeige ich dir die schönsten Reiseziele und das beste Essen, das du dort finden kannst. 
-        Lass dich inspirieren!</p>
-      <a href="Kontakt.html">
-        <button type="button">Kontakt</button>
-      </a>
+      <div class="about-me-text">
+          <h2>Hi, ich bin Patrick</h2>
+          <p>Von 2018 bis 2022 habe ich als Expat in Shanghai gelebt. Meine Leidenschaft ist das Reisen und natürlich Essen!
+              Ich liebe es, in einem Land herumzureisen, neue Leute kennenzulernen und neue Gerichte zu probieren. 
+              Auf meiner Website zeige ich dir die schönsten Reiseziele und das beste Essen, das du dort finden kannst. 
+              Lass dich inspirieren!</p>
+          <a href="Kontakt.html">
+              <button type="button">Kontakt</button>
+          </a>
+      </div>
     </section>
 
     <!-- Reisen -->
-    <section aria-labelledby="reisen">
-      <h2 id="reisen">Die schönsten Ecken in China und das Beste drumherum</h2>
-      <img src="/Assets/Reisen.jpeg" 
-           alt="Eine überfüllte Bahn mit Menschen, die auf ihre Handys starren" 
-           title="Menschen in einer vollen Bahn mit Handys">
-      <p>Shanghai selbst bietet schon allerhand für Entdecker, aber China ist groß – sehr groß. Die verschiedenen
-        Provinzen unterscheiden sich landschaftlich wie kulturell. Und von Shanghai aus ist man innerhalb weniger Stunden
-        in Japan, Vietnam, Korea, und und und...</p>
-      <a href="/Reisen_Blog-Seite.html">
-        <button type="button">Alle Reiseziele</button>
-      </a>
+    <section class="content-section-startpage">
+      <div class="content-image-startpage">
+          <img src="/Assets/Suzhou_Mall.jpeg" 
+               alt="Sonnenuntergang über einer Einkaufsstraße mit hohen Gebäuden" 
+               title="Sonnenuntergang über Suzhou">
+      </div>
+      <div class="content-text-startpage">
+          <h2>Die schönsten Ecken in China und das Beste drumherum</h2>
+          <p>Shanghai selbst bietet schon allerhand für Entdecker, aber China ist groß – sehr groß. Die verschiedenen
+              Provinzen unterscheiden sich landschaftlich wie kulturell. Und von Shanghai aus ist man innerhalb weniger Stunden
+              in Japan, Vietnam, Korea, und und und...</p>
+          <a href="/Reisen_Blog-Seite.html">
+              <button type="button">Alle Reiseziele</button>
+          </a>
+      </div>
     </section>
 
     <!-- Essen -->
-    <section aria-labelledby="essen">
-      <h2 id="essen">Essen macht glücklich</h2>
-      <img src="/Assets/Essen.jpeg"
-           alt="Tisch mit drehbarer Glasplatte und verschiedenen chinesischen Gerichten"
-           title="Traditionelle chinesische Speisen auf einem großen Tisch">
-      <p>Von traditionellen Gerichten über Fast Food und Fusion-Food bis hin zu Fine-Dine aus aller Herren Länder. 24
-        Stunden, 7 Tage die Woche, geliefert oder im Restaurant. Asien bietet, was der Gaumen begehrt und das Herz
-        glücklich macht.</p>
-      <a href="/Essen_Blog-Seite.html">
-        <button type="button">Das beste Essen</button>
-      </a>
+    <section class="content-section-startpage">
+      <div class="content-image-startpage">
+          <img src="/Assets/Essen.jpeg"
+               alt="Tisch mit drehbarer Glasplatte und verschiedenen chinesischen Gerichten"
+               title="Traditionelle chinesische Speisen auf einem großen Tisch">
+      </div>
+      <div class="content-text-startpage">
+          <h2>Essen macht glücklich</h2>
+          <p>Von traditionellen Gerichten über Fast Food und Fusion-Food bis hin zu Fine-Dine aus aller Herren Länder. 24
+              Stunden, 7 Tage die Woche, geliefert oder im Restaurant. Asien bietet, was der Gaumen begehrt und das Herz
+              glücklich macht.</p>
+          <a href="/Essen_Blog-Seite.html">
+              <button type="button">Das beste Essen</button>
+          </a>
+      </div>
     </section>
 
   </main>
